Closed Bug 1596772 Opened 5 years ago Closed 2 years ago

The OffscreenCanvas case of WebGLContext doesn't implement GetParentObject correctly

Categories

(Core :: Graphics: CanvasWebGL, defect, P5)

defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox97 --- fixed

People

(Reporter: bzbarsky, Assigned: evilpie)

References

Details

Attachments

(1 file)

nsICanvasRenderingContextInternal::GetParentObject just returns mCanvasElement. This means it returns null in the OffscreenCanvas case, right?

It might be better to have this GetParentObject return an nsIGlobalObject* and get it from either mCanvasElement or mOffscreenCanvas as needed.

Blocks: 1596921
Component: Graphics → Canvas: WebGL
Priority: -- → P5

Yes, that sounds better.

Assignee: nobody → evilpies
Pushed by evilpies@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/06c7b4e2d14b
Make nsICanvasRenderingContextInternal::GetParentObject off-screen compatible. r=aosmond
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: