Bug 1596772 - Make nsICanvasRenderingContextInternal::GetParentObject off-screen compatible. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D133571